--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "javascript code kata template",
   "author": "Judit Ordog-Andrasi",
   "scripts": {
-    "test": "node_modules/.bin/mocha kata.spec.js"
+    "test": "mocha **/*.spec.js"
   },
   "devDependencies": {
     "chai": "*",
